tests/snapshots/run_wpt_conformance__coreml_hardSigmoid_float32_positive_4D_tensor_specified_all_options__positive_options_alpha_and_positive_options_beta_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "hard_sigmoid.https.any.js",
    "hardSigmoid float32 positive 4D tensor specified all options (positive options.alpha and positive options.beta)",
    "coreml",
    "PASS",
)
